cmake_minimum_required(VERSION 2.8)
project( VideoCapture )
find_package( OpenCV REQUIRED )
add_executable( detectpeople detectpeople.cpp )
add_executable( make_video make_video.cpp )
add_executable( detectPeoplePickLargest detectPeoplePickLargest.cpp )
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
target_link_libraries( detectpeople ${OpenCV_LIBS} )
target_link_libraries( make_video ${OpenCV_LIBS} )
target_link_libraries(  detectPeoplePickLargest ${OpenCV_LIBS} )